src/test/ui/nll/polonius/polonius-smoke-test.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/polonius-smoke-test.rs:6:5
   |
LL |     &x
   |     ^^ borrowed value does not live long enough
LL | }
   | -- borrow later used here
   | |
   | `x` dropped here while still borrowed

error[E0503]: cannot use `x` because it was mutably borrowed
  --> $DIR/polonius-smoke-test.rs:12:13
   |
LL |     let y = &mut x;
   |             ------ borrow of `x` occurs here
LL |     let z = x;
   |             ^ use of borrowed `x`
LL |     let w = y;
   |             - borrow later used here

error[E0505]: cannot move out of `x` because it is borrowed
  --> $DIR/polonius-smoke-test.rs:18:13
   |
LL |     let y = &mut *x;
   |             ------- borrow of `*x` occurs here
LL |     let z = x;
   |             ^ move out of `x` occurs here
LL |     y
   |     - borrow later used here

error[E0505]: cannot move out of `s` because it is borrowed
  --> $DIR/polonius-smoke-test.rs:42:5
   |
LL |     let r = &mut *s;
   |             ------- borrow of `*s` occurs here
LL |     let tmp = foo(&r);
LL |     s;
   |     ^ move out of `s` occurs here
LL |     tmp;
   |     --- borrow later used here

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0503, E0505, E0597.
For more information about an error, try `rustc --explain E0503`.
